Separate default tokenizers to separate module and make more examples

--- a/lexparse.cabal
+++ b/lexparse.cabal
@@ -27,6 +27,7 @@ executable lexparse
   main-is: Main.hs
   other-modules:
       Tokenizer
+      Tokenizers
       Paths_lexparse
   hs-source-dirs:
       src
